include_directories(${PROJECT_SOURCE_DIR}/tests/C)
include_directories(${PROJECT_SOURCE_DIR}/src/public)
include_directories(${PROJECT_SOURCE_DIR}/src)
link_directories(${PROJECT_SOURCE_DIR}/src)
link_directories(${MXML_INCLUDE_DIR}/../lib)

add_executable(adios_test_c adios_test_c.c)
target_link_libraries(adios_test_c ${ADIOS_LIB} ${ADIOSLIB_LDADD} ${MPI_LIBRARIES})
set_target_properties(adios_test_c PROPERTIES COMPILE_FLAGS "${ADIOSLIB_CPPFLAGS} ${ADIOSLIB_CFLAGS} ${CPPFLAGS}")
set_target_properties(adios_test_c PROPERTIES LINK_FLAGS "${ADIOSLIB_LDADD} ${MPI_LINK_FLAGS}")
