add_subdirectory(programs)

install(FILES HOWTO-Add-new-test DESTINATION ${PROJECT_BINARY_DIR}/tests/suite)
install(FILES HOWTO-Run DESTINATION ${PROJECT_BINARY_DIR}/tests/suite)
install(PROGRAMS cleanup.sh PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE DESTINATION ${PROJECT_BINARY_DIR}/tests/suite)
install(DIRECTORY reference DESTINATION ${PROJECT_BINARY_DIR}/tests/suite)
install(PROGRAMS test.sh PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE  DESTINATION ${PROJECT_BINARY_DIR}/tests/suite)
install(DIRECTORY tests FILE_PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE DESTINATION ${PROJECT_BINARY_DIR}/tests/suite FILES_MATCHING PATTERN ".svn" EXCLUDE)
